--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ jobs:
       CLOUDSDK_CORE_DISABLE_PROMPTS: 1
     steps:
       - uses: actions/checkout@v2
-      - run: openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in ./service-account.json.enc -out service-account.json -d
+      - run: openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in ../../../service-account.json.enc -out service-account.json -d
       - run: curl https://sdk.cloud.google.com | bash > /dev/null;
       - run: source $HOME/google-cloud-sdk/path.bash.inc
       - run: gcloud components update kubectl
